<resources>
    <string name="app_name">My Faraid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_perhitungan">Perhitungan</string>
    <string name="title_activity_ahli_waris">AhliWaris</string>
    <string name="title_activity_hasil">Hasil</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_faraidh">Faraidh</string>
    <string name="title_activity_contoh_kasus">ContohKasus</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_pilihan">Pilihan</string>
    <string name="title_activity_perhitungan_tanah">PerhitunganTanah</string>
    <string name="title_activity_perhitungan_dolar">PerhitunganDolar</string>
    <string name="action_settings">Settings</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="aplikasi_penghitung_waris">Aplikasi Penghitung Waris</string>
    <string name="menghitung">Menghitung</string>
    <string name="belajar">Belajar</string>
    <string name="tentang">Tentang</string>
    <string name="kritik_dan_saran">Kritik dan saran</string>
    <string name="alhamdulilah">Alhamdulilah</string>
    <string name="assalamu_alaikum">Assalamualaikum</string>
    <string name="unib">UNIB</string>
</resources>