<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_utama"
                android:textColor="#595959"
                android:textSize="20sp"/>
            <View
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="6dp"
                android:layout_marginStart="5dp"
                android:background="@color/Primary"/>

        </LinearLayout>
        <TextView
            android:textColor="#595959"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assalamu_alaikum"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardElevation="3dp"
        app:cardCornerRadius="3dp"
        android:focusable="true"
        app:cardBackgroundColor="@color/Primary">

        <LinearLayout
            android:padding="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aplikasi_penghitung_waris"
                    android:textColor="#FFFFFF"
                    android:padding="5dp"
                    android:paddingBottom="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_menu"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"/>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="23dp"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/logo_app" />


            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:id="@+id/tombol1"
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menghitung"
                    android:textSize="18sp"
                    android:textColor="#5e5e5e"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/ic_hitung"
                    android:layout_width="123dp"
                    android:layout_height="93dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="57dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:src="@drawable/kalkulator" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:id="@+id/tombol2"
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belajar"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ic_belajar"
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/buku" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:id="@+id/tombol3"
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tentang"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ic_tentang"
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/about" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:id="@+id/tombol4"
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bantuan"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ic_kritik"
                    android:layout_width="110dp"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/helps" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:textColor="#595959"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/alhamdulilah"/>


</LinearLayout>